--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Meaghan Lidd
 description: DREAM Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://meglidd.github.io/images/meglidd.png
 
 #
 # Flags below are optional
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: yourmail@mail.com
+  email: mlidd@depaul.edu
   facebook:
   flickr:
   rss: # just type anything here for a working RSS icon
