--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Meaghan Lidd
+name: Meg Lidd
 
 # Short bio or description (displayed in the header)
 description: DREAM Project
